<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OnboardingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        style="@style/Responsive16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/trips"
            android:textColor="@color/colorTitleSecondary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/mountain"
            android:textColor="@color/colorTextDefault"
            android:textSize="32sp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="64dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_il_hiking"
            android:contentDescription="@string/illustrasi_onboarding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/poppins"
            android:text="@string/start_an_immersive_hiking_experience_and_exploring_beautiful_places_around_your_area_today"
            android:textColor="@color/colorTextDefault"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/btnGetStarted"
            android:layout_width="225dp"
            android:layout_height="52dp"
            android:layout_marginTop="72dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/bg_btn_onboarding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                android:textColor="@color/colorBackground"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/ic_next"
                android:contentDescription="@string/next" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>